--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@reduxjs/toolkit": "^1.5.1",
     "@stripe/stripe-js": "^1.15.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,7 +19,10 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "reduct": "^3.3.1",
+    "redux": "^4.1.0",
+    "stripe": "^8.149.0"
   },
   "scripts": {
     "start": "react-scripts start",
