--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.0",
     "idb": "^6.1.0",
     "if-env": "^1.0.4"
